--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
-  "homepage ": "https://Cami-Jahr.github.io/Cami-Jahr.github.io",
+  "homepage": "http://cami-jahr.github.io/Spirit-Enhancement/",
   "name": "spirit-enchant",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "git": "^0.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-lineto": "^3.2.0",
