--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://cami-jahr.github.io/Spirit-Enhancement/",
+  "homepage": "http://Cami-Jahr.github.io/Spirit-Enhancement/",
   "name": "spirit-enchant",
   "version": "0.1.0",
   "private": true,
